syntax = "proto3";

option java_multiple_files = true;
option java_package = "jvmram.proto";
option java_outer_classname = "JvmRamProto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package jvmram;

service AppBackend {
  rpc GetExplicitlyFollowingPids (google.protobuf.Empty) returns (PidList);
  rpc SetFollowingPids (PidList) returns (google.protobuf.Empty);
  rpc AreChildrenProcessesIncluded (google.protobuf.Empty) returns (ChildrenProcessIncludedResponse);
  rpc IncludeChildrenProcesses (google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc ExcludeChildrenProcesses (google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc GetApplicableMetrics (google.protobuf.Empty) returns (ApplicableMetricsResponse);

  rpc SetVisible (SetVisibleRequest) returns (google.protobuf.Empty);
  rpc SetInvisible (SetInvisibleRequest) returns (google.protobuf.Empty);

  rpc RefreshAvailableJvmProcesses (google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc ListenJvmProcessList (google.protobuf.Empty) returns (stream JvmProcessListResponse);
  rpc ListenGraphQueues (google.protobuf.Empty) returns (stream GraphQueues);

  rpc TriggerGc (Pid) returns (google.protobuf.Empty);
  rpc DumpHeap (File) returns (google.protobuf.Empty);
}

message Pid {
  int64 pid = 1;
}

message ProcInfo {
  int64 pid = 1;
  string display_name = 2;
}

message PidList {
  repeated Pid pids = 1;
}

message JvmProcessListResponse {
  repeated ProcInfo infos = 1;
}

message File {
  int64 pid = 1;
  string file_name = 2;
}

enum MetricType {
  RSS = 0;
  PSS = 1;
  USS = 2;
  WS = 3;
  PB = 4;
  HEAP_USED = 5;
  HEAP_COMMITTED = 6;
  NMT_USED = 7;
  NMT_COMMITTED = 8;
}

message GraphPoint {
  google.protobuf.Timestamp moment = 1;
  int64 bytes = 2;
}

message GraphQueue {
  MetricType metric_type = 1;
  repeated GraphPoint points = 2;
}

message GraphQueues {
  int64 pid = 1;
  repeated GraphQueue queues = 2;
}

message ApplicableMetricsResponse {
  repeated MetricType types = 1;
}

message SetVisibleRequest {
  MetricType metric_type = 1;
}

message SetInvisibleRequest {
  MetricType metric_type = 1;
}

message ChildrenProcessIncludedResponse {
  bool areIncluded = 1;
}
